k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
spec:
  ingressClassName: traefik
  rules:
    - host: support-api.yengec.co
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: support-ai-agent
                port:
                  number: 3001
